fix: hide play button on mobile

--- a/astro/src/components/patterns/Hero/Hero.css
+++ b/astro/src/components/patterns/Hero/Hero.css
@@ -108,6 +108,10 @@
       display: none;
     }
 
+    @media (--xs-only) {
+      display: none;
+    }
+
     @media (--md-up) {
       bottom: var(--space-6);
       right: var(--space-6);
